prevent shift of app names caused by scrollbar, part 2

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -586,7 +586,9 @@ label.infield { cursor:text !important; top:1.05em; left:.85em; }
 	color: #fff;
 	white-space:nowrap; overflow:hidden; text-overflow:ellipsis; /* ellipsize long app names */
 	padding-bottom: 10px;
-	padding-left: 8px; /* prevent shift caused by scrollbar */
+	/* prevent shift caused by scrollbar */
+	padding-left: 8px;
+	width: 64px;
 }
 
 	/* icon opacity and hover effect */
